# Testura

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
backend/app/api/: badge.py  billing.py  repos.py  tests.py  webhooks.py
backend/app/core/: analyzer.py  config.py  generator.py  limits.py  runner.py
backend/app/models/: repo.py  test_run.py
backend/app/services/: email.py  github.py
docker/: docker-compose.yml
docker/sandbox/: Dockerfile
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/billing/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/og/: route.tsx
frontend/app/repos/[id]/: page.tsx
frontend/lib/: api.ts  supabase.ts  utils.ts
github-action/: action.yml
supabase/: schema.sql
