[tool.poetry]
name = "testura-backend"
version = "0.1.0"
description = "Agentic testing for AI-generated code"
authors = ["Rishikesh <rishi89324@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.1"
supabase = "^2.5.0"
anthropic = {version = "^0.28.0", optional = true}
openai = "^1.35.0"
gitpython = "^3.1.43"
httpx = "^0.27.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
stripe = "^10.1.0"
celery = "^5.4.0"
redis = "^5.0.7"
docker = "^7.1.0"
pygments = "^2.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
